--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -15,6 +15,16 @@
   }
 */
 
+@include respond(tab-port){
+  width: 100%;
+  padding: 4rem;
+  padding-left: 7rem;
+}
+
+@include respond(phone){
+  transform: skewX(0);
+}
+
   &__shape{
     width: 15rem;
     height: 15rem;
@@ -24,6 +34,10 @@
     shape-outside: circle(50% at 50% 50%); // make text's shape floated around like circle.
     clip-path: circle(50% at 50% 50%); // make it round.
     transform: translateX(-3rem) skewX(-12deg); // margin-right, fix skew.
+
+    @include respond(phone){
+      transform: translateX(-3rem) skewX(0);
+    }
   }
 
   &__img{
@@ -34,6 +48,10 @@
 
   &__text{
     transform: skewX(-12deg);
+
+    @include respond(phone){
+      transform: skewX(0);
+    }
   }
 
   &__caption{
