--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,6 @@ body {
   font-weight: 400;
   line-height: 1.7;
   color: $color-grey-dark;
-  padding: 3rem;
 }
 
 .heading-primary {
@@ -20,6 +19,11 @@ body {
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out;
+
+    @include respond(phone){
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
 
   &--sub {
@@ -28,6 +32,10 @@ body {
     font-weight: 700;
     letter-spacing: 1.7rem;
     animation: moveInRignt 1s ease-out; // Shorthnad way
+
+    @include respond(phone){
+      letter-spacing: .5rem;
+    }
   }
 }
 
@@ -44,6 +52,14 @@ body {
   color: transparent;
 
   transition: all .2s;
+
+  @include respond(tab-port){
+    font-size: 3rem;
+  }
+
+  @include respond(phone){
+    font-size: 2.5rem;
+  }
 
     &:hover{
       transform: skewY(2deg) skewX(15deg) scale(1.1);
