--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -4,28 +4,52 @@
   position: relative;
 
   &__img{
+    position: absolute;
     width: 55%;
     border-radius: 2px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
-    position: absolute;  // overlap the pictures
     z-index: 10;
     transition: all .2s;
 
     outline-offset: 2rem;
 
+    @include respond(tab-port){
+      position: relative; // important
+      width: 33.33333333%;
+      float: left;
+      box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
+    }
+
       &--p1{
         left: 0;
         top: -2rem;
+
+        @include respond(tab-port){
+          top: 1rem;
+          transform: scale(1.2);
+        }
       }
 
       &--p2{
         right: 0;
         top: 2rem;
+
+        @include respond(tab-port){
+          top: -1rem;
+          transform: scale(1.3);
+          z-index: 100;
+        }
       }
 
       &--p3{
         left: 20%;
         top: 10rem;
+
+        @include respond(tab-port){
+          top: 1rem;
+          left: 0;
+          transform: scale(1.2);
+        }
       }
 
         &:hover{
