--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -1,11 +1,15 @@
 .feature-box{
     background-color: rgba($color-white, .8);   //opacity : using rgba.
     font-size: 1.5rem;
-    padding: 2rem;
+    padding: 2.5rem;
     text-align: center;
     border-radius: 3px;
     box-shadow: $box-shadow-1;
     transition: transform .3s;
+
+    @include respond(tab-port){
+      padding: 2rem;
+    }
 
       &__icon{
         font-size: 6rem;
@@ -15,6 +19,10 @@
         background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
         -webkit-background-clip: text;
         color: transparent;
+
+        @include respond(tab-port){
+          margin-bottom: 0;
+        }
       }
 
       &:hover{
