--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -17,6 +17,9 @@
     border-bottom: 3px solid transparent;
     transition: all .3s;  // border-bottom when state of focus and invalid.
 
+    @include respond(tab-port){
+      width: 100%;
+    }
       &:focus{
         outline: none; // make it clear focus state. instead, using shadow, border-line.
         box-shadow: 0 1rem 2rem rgba($color-black, .1);
@@ -50,6 +53,11 @@
   &__radio-group{
     width: 49%;
     display: inline-block;
+
+    @include respond(tab-port){
+      width: 100%;
+      margin-bottom: 2rem;
+    }
   }
 
   &__radio-input{
