--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,8 +13,10 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/form";
+@import "components/popup";
 @import "components/story";
 
+@import "layout/navigation";
 @import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
