--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,6 +5,10 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -20vh;
+
+  @include respond(tab-port){
+    padding: 20rem 0;
+  }
 }
 
 .section-feature{
@@ -21,23 +25,39 @@
     transform: skewY(7deg);
 
   }
+
+  @include respond(tab-port){
+    padding: 10rem 0;
+  }
 }
 
 .section-tour{
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem;
+
+  @include respond(tab-port){
+    padding: 20rem 0 10rem 0;
+  }
 }
 
 .section-story{
   position: relative;
-  padding: 15rem;
+  padding: 15rem 0;
+
+  @include respond(tab-port){
+    padding: 10rem 0;
+  }
 }
 
 
 .section-booking{
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+
+  @include respond(tab-port){
+    padding: 10rem 0;
+  }
 }
 
 .book{
@@ -47,12 +67,35 @@
                                     transparent 50%),
                                     url(../img/nat-10.jpg);  //Solid gradient like clip-path.
   background-size: cover;
-  height: 50rem;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
+
+  @include respond(tab-land){
+    background-image: linear-gradient(105deg,
+                                      rgba($color-white, .9) 0%,
+                                      rgba($color-white, .9) 65%,
+                                      transparent 65%),
+                                      url(../img/nat-10.jpg);
+  }
+
+  @include respond(tab-port){
+    background-image: linear-gradient(to right,
+                                      rgba($color-white, .9) 0%,
+                                      rgba($color-white, .9) 100%),
+                                      url(../img/nat-10.jpg);
+  }
 
     &__form{
       width: 50%;
       padding: 6rem;
+
+    @include respond(tab-land){
+      width: 65%;
+    }
+
+    @include respond(tab-port){
+      width: 100%;
+    }
+
     }
 }
