build workflow. install npm packages, compile, concat, autoprefixer, compress, npm-run-all.

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -161,7 +161,9 @@
 
 
 
-  @include respond(tab-port){
+  //@include respond(tab-port){
+  @media only screen and (max-width: 56.25em),
+         only screen and (hover:none){ // for touch screen have small width but no hovering.
       height: auto; // automatically stretched on its contents.
       border-radius: 3px;
       background-color: $color-white;
